--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-native": "0.66.4",
     "react-native-app-intro-slider": "^4.0.4",
     "react-native-device-info": "^8.4.8",
+    "react-native-network-info": "^5.2.1",
     "react-native-progress-circle": "^2.1.0",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.1",
