--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native-stack": "^6.2.5",
     "react": "17.0.2",
     "react-native": "0.66.4",
+    "react-native-android-installed-apps-unblocking": "^1.0.3",
     "react-native-app-intro-slider": "^4.0.4",
     "react-native-device-info": "^8.4.8",
     "react-native-network-info": "^5.2.1",
